<resources>
    <string name="app_name">Track That</string>

    <string name="hello">TRACKMATE</string>
    <string name="minor">Minor Project</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="msg01">Login To Your Account</string>
    <string name="enter_name">Enter Your Username</string>
    <string name="passwd">Enter Your Password</string>
    <string name="button_page2">Enter</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_welcome">welcome</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_custom_drawer_adapter">CustomDrawerAdapter</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Group</string>
    <string name="title_section3">Maps</string>
    <string name="title_section4">About</string>
    <string name="title_section5">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="about">About Us</string>
    <string name="about1">Android application:  TRACKMATE
    </string>

    <string name="about2">Developers:
    </string>

    <string name="about3">Shreyans Pathak
    </string>

    <string name="about4">Nitesh Goyal
    </string>

    <string name="about5">Ketan Rajoriya
    </string>

    <string name="about6">Saurav Arora
    </string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_custom_spinner">CustomSpinnerActivity</string>
    <string name="title_activity_group1">Group1</string>
    <string name="title_activity_delete">Delete</string>
    <string name="title_activity_modify">Modify</string>

    <string-array name="planets_array">
        <item>Maps</item>
        <item>Group</item>
        <item>One-tap Alert</item>
        <item>About</item>
        <item>Logout</item>
        </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_navigator">Navigator</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_smschat">SMSChat</string>


</resources>
