<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trackingapp.minor.shreyans.trackthat.AboutUs"
    android:background="@drawable/back">


    <TextView android:text="@string/about1"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="30dp"/>

    <TextView android:text="@string/about2"
        android:layout_marginTop="130dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textColor="#000000"
        android:textSize="30dp"/>
    <TextView android:text="@string/about3"
        android:layout_marginTop="200dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>

    <TextView android:text="@string/about4"
        android:layout_marginTop="240dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>
    <TextView android:text="@string/about5"
        android:layout_marginTop="280dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>
    <TextView android:text="@string/about6"
        android:layout_marginTop="320dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20dp"/>


</RelativeLayout>
